--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "devDependencies": {
     "babel-jest": "^22.2.2",
     "babel-preset-es2015": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "jest": "^22.3.0",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "react-test-renderer": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
